5.1: ?/??/2016
	* CORE: Added @DatabaseField(fullColumnDefinition) for fully describing a column as opposed to columnDefinition.
	* CORE: Added synchronized keyword to BaseDaoImpl.createOrUpdate() and createIfNotExists().
	* CORE: Added date integer date support.  Thanks to noordawod.
	* CORE: Fixed but with get table name not using TableInfo.  Thanks to 0xabadea.
	* CORE: Fixed handling of field capitalization which was screwing up Turkish fields.  Thanks to folkyatina.
	* CORE: Fixed handling of joined queries with orders and group bys.  Thanks much to p91paul.
	* JDBC: Fixed problem with UUID native type not using the correct persister.  Thanks to Bo98.

5.0: 6/27/2016
	* ALL: ORMLite has dropped support for Java 5.  Java 6 is now required.
	* ALL: Added boolean argument to DatabaseConnection.compileStatement(...) to fix a cache bug.
	* ALL: Changed DatabaseResults.getObjectCache() to be getObjectCacheForRetrieve() and getObjectCacheForStore().
	* CORE: Added JOIN-ing between tables _without_ a foreign-object relationship.
	* CORE: Added TimeStampStringType to support Android timestamps.
	* CORE: Added the ability to override the DataPersister as well as the FieldConverter.
	* CORE: Added support for the @Table entity from javax.persistence annotations. Thanks to wener. Bug #174.
	* CORE: Added used of java.io.Closeable to support CloseableIterator and other features for Java7 support. Thanks to livelazily.
	* CORE: Added Dao.create(Collection) method for bulk creation.  Thanks to Farrukh Najmi for the good idea.
	* CORE: Added DataType.BOOLEAN_CHAR (to support '1' '0' or 't' 'f') and BOOLEAN_INTEGER.  Thanks to stew.
	* CORE: Added support for QueryBuilder.countOf("DISTINCT(field)").  Thanks to spacetime.
	* CORE: Added support for Java 8 methods.  Thanks to VincentFTS.
	* CORE: Added support for Joda DateTime to be able to be a version field.  Thanks much to outofrange.